# Demo-LinkOps-MLOps

./: -Tree.txt  .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yml  DEMO-LinkOps-Tree.txt  DEMO-QA-IMPLEMENTATION.md  DEMO-SYNC-IMPLEMENTATION.md  DEMO-Tree.txt  DEMO_CHANGES.md  DEPLOYMENT_FIXED.md  DOCKER_HUB_SETUP.md  DOCKER_SETUP_QUICK_FIX.md  FRONTEND_INTEGRATION.md  INFRASTRUCTURE_UPDATE_SUMMARY.md  INTEGRATION_COMPLETE.md  INTERVIEW_PLATFORM_ENGINEER.md  Jade-Tree.txt  MANAGER-CONFIRMATION-IMPLEMENTATION.md  MLOps-Tree.txt  Makefile  PHASE3_4_SUMMARY.md  PHASE5_6_SUMMARY.md  PIPELINE_FIXES_SUMMARY.md  README-HTC-PROMPT-EDITOR.md  README-TENANT-SYNC.md  README.md  STRUCTURE_CLEANUP_SUMMARY.md  VERSION  build-and-push-all.sh  build-and-push-demo-images.sh  build-demo-images.sh  build-frontend-only.sh  build_images.py  configure_docker_secrets.sh  demo_executor_workflow.py  deploy-demo.sh  deploy-local.sh  (+51 more)
.github/: dependabot.yml
archive/: CONFIGURATION.md  DOCKER-COMPOSE-BUILD.md  PHASE3_4_SUMMARY.md  deployment-fixed.md
chart/: Chart.yaml  README.md  values.yaml
demo_data/: delinquency.csv  vendor_suggestions.csv
docker/: docker-compose.yml
docs/: ARISE-README.md  CD-README.md  CHECKLIST-CI-CD.md  CHECKLIST-CURSOR-PLATFORM-READINESS.md  CHECKLIST-HELM-ARGO-GITOPS.md  CHECKLIST-K8S-NETWORKING.md  CHECKLIST-SECURITY.md  CI-CD-SETUP.md  COMPLETE-PIPELINE-README.md  DEPLOYMENT_AUTOMATION.md  NEW-SAHDOW.MD  PLATFORM_COMPLETE.md  README.md  demo-flow.md  session-management.md
frontend/: .eslintrc.json  .fix_frontend_cache.json  App.vue  Dockerfile  README.md  cleanup-legacy.sh  create-htpasswd.sh  docker-entrypoint.sh  eslint.config.js  fix_frontend.py  frontend-Tree.txt  index.css  index.html  main.js  nginx.conf  nginx.conf.template  npm-install.sh  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  test-holocore-simple.js  test-holocore.js  tsconfig.json  validate-configs.js  vite.config.js  vite.config.js.timestamp-1752089790538-b3137147c2a3a.mjs
helm/: HELM_REFACTOR_SUMMARY.md  Helm-Tree.txt  README.md  helm-Tree.txt  index.yaml  linkops-1.0.0.tgz
htc/: feedback_collector.py  prompt_template_builder.py  train_lora.py
k8s/: README.md  backend-deployment.yaml  backend-service.yaml  cleanup.sh  configmap.yaml  deploy.sh  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  ml-models.yaml  namespace.yaml  pipeline.yaml  postgres.yaml  rag-deployment.yaml  rag-service.yaml  redis.yaml  secrets.yaml  sync-engine.yaml  validate.sh
ml-models/: Dockerfile  README.md  config.yaml  main.py  requirements.txt
mlops/: README.md
monitoring/: session-metrics.yaml
nginx/: nginx.conf
pipeline/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
rag/: Dockerfile  README-UPLOAD-QA.md  README.md  cli.py  embed.py  main.py  (+1 more)
(+605 files in other folders)
